// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render properly 1`] = `
<div
  className="bp3-navbar navBar bp3-dark"
>
  <div
    className="bp3-navbar-group bp3-align-left navBar__group"
  >
    <ul>
      <li>
        NavBarItemDesktop
      </li>
      <li>
        NavBarItemDesktop
      </li>
      <li>
        NavBarItemDesktop
      </li>
    </ul>
  </div>
</div>
`;

exports[`should render properly with custom component 1`] = `
<div
  className="bp3-navbar navBar bp3-dark"
>
  <div
    className="bp3-navbar-group bp3-align-left navBar__group"
  >
    <ul>
      <li>
        <button
          type="button"
        >
          click me
        </button>
      </li>
      <li>
        <img
          alt="login logo"
          src="log-in.svg"
        />
      </li>
      <li>
        <div>
          check me
          <input
            type="checkbox"
          />
        </div>
      </li>
      <li>
        <div>
          search me
          <input
            type="text"
          />
        </div>
      </li>
    </ul>
  </div>
</div>
`;
